--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1774,6 +1774,7 @@
 
         <!-- BUILD TWEAKS START -->
         <activity android:name=".rascarlo.SystemSettings" />
+        <activity android:name=".rascarlo.StatusBarClockStyle" />
         <!-- BUILD TWEAKS END -->
 
         <receiver android:name=".widget.SettingsAppWidgetProvider"
