--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1593,6 +1593,8 @@
 
         <activity android:name=".slim.privacyguard.PrivacyGuardManager" />
 
+        <activity android:name=".headsup.HeadsUpSettings" />
+
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
                 android:label="@string/crypt_keeper_encrypt_title">
